--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,11 @@ textarea{
     border: none;
     margin: 20px 0;
     height: 40vh;
+    font-size: 20px;
 }
-iframe{
-    margin:20px;
+iframe {
+    width: 100%;
+    height: 20em;
     background: white;
-    border: 2px;
-    
+    border-radius: 5px;
 }
